Correctly trigger executed signal of KListWidget for both single click and double click.

Patch by Yichao Yu.
BUG: 201093
FIXED-IN: 4.10
REVIEW: 107829